# labyrinth

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main.c
.cache/clangd/index/: block_alloc.c.680FF8CF7E826F69.idx  block_alloc.h.E8A398CB928BCD2A.idx  linear_alloc.c.E4B5D719C05B150A.idx  list.c.C005155F2D02A20B.idx  list.h.9509A6AC4FDD2518.idx  logging.c.1D8C636E63EECE27.idx  logging.c.55FCA48FC1AFAD90.idx  logging.c.E592725ABFAFF7FC.idx  logging.h.442D844A4465096A.idx  logging.h.B510EAFF408C13BB.idx  main.c.B7924050EC3EF435.idx  pool_alloc.c.1B165B4CF7CE25C2.idx  pool_alloc.h.6B994A286842F2E7.idx  queue.c.A0DAEEB94F8FFC1B.idx  queue.h.FCB92387779BE912.idx  random.c.67B34C58D88253FA.idx  random.h.C5E79F430CB1E717.idx  stack.c.7FACF2ADCB1F56F1.idx  stack.h.FBDFDB4A202C4B9A.idx  types.h.7FF51E76DB042134.idx  types.h.950AF5439D1007DA.idx  vk_platform.h.1AA2DBCA4FF14BE8.idx  vulkan_core.h.5BB484D2936A0A8E.idx  vulkan_video_codec_av1std.h.B6CD21A974979C3D.idx  vulkan_video_codec_av1std_decode.h.5341E63948D0A28F.idx  vulkan_video_codec_h264std.h.0FE9B88630453709.idx  vulkan_video_codec_h264std_decode.h.C8D63A074ED0357F.idx  vulkan_video_codec_h264std_encode.h.6E070A32AC6DF2CC.idx  vulkan_video_codec_h265std.h.4637D2BEF28D8A21.idx  vulkan_video_codec_h265std_decode.h.0B42E67FFA88E9DC.idx  vulkan_video_codec_h265std_encode.h.AEEC5B5BD66AAC6F.idx  vulkan_video_codecs_common.h.B284C5F040C9D693.idx
assets/shaders/glsl/compute/: 1.comp
assets/shaders/glsl/fragment/: tri.frag
assets/shaders/glsl/vertex/: mesh.vert  tri.vert
assets/shaders/spv/: 1.comp.spv  mesh.vert.spv  tri.vert.spv
base/: CMakeLists.txt
base/allocators/: CMakeLists.txt
base/allocators/include/allocators/: alloc_types.h
base/allocators/src/: alloc_types.c  block_alloc.c
base/data_structures/: CMakeLists.txt
base/data_structures/include/data_structures/: hash.h  list.h  map.h  set.h
base/data_structures/src/: map.c  queue.c  set.c
base/math/: CMakeLists.txt
base/math/src/: quaternion.c
base/utils/: CMakeLists.txt
base/utils/include/utils/: logging.h  types.h
base/utils/src/: logging.c  types.c
core/: CMakeLists.txt
core/allocators/: CMakeLists.txt
core/allocators/src/: alloc_info.c  block_alloc.c  linear_alloc.c
core/data_structures/: CMakeLists.txt
core/data_structures/src/: list.c  map.c  queue.c  set.c  stack.c
core/math/: CMakeLists.txt
core/math/include/math/: quaternion.h  (+1 more)
core/math/src/: quaternion.c  vector.c
core/random/: CMakeLists.txt
core/random/src/: random.c
core/utility/: CMakeLists.txt
core/utility/src/: logging.c
core/utils/: CMakeLists.txt
core/utils/src/: logging.c
deprecated/core/: CMakeLists.txt
deprecated/core/data_structures/: CMakeLists.txt
labyrinth/: CMakeLists.txt
labyrinth/base/: CMakeLists.txt
labyrinth/base/fabric/: CMakeLists.txt
labyrinth/base/math/: CMakeLists.txt
labyrinth/base/utils/: CMakeLists.txt
labyrinth/graphics/renderer/: CMakeLists.txt
labyrinth/graphics/renderer/include/renderer/: allocator.h  core.h  descriptor.h  frame.h  gpu_allocator.h  image.h  mesh.h  shader.h  swapchain.h  window.h
labyrinth/graphics/renderer/src/: allocator.c  core.c  descriptor.c  frame.c  gpu_allocator.c  image.c  mesh.c  shader.c  swapchain.c  window.c
pkgs/SPIRV-Reflect/: CMakeLists.txt  spirv_reflect.c
(+54 files in other folders)
